--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,11 +14,14 @@
     "@azure/cognitiveservices-computervision": "^8.2.0",
     "@azure/cognitiveservices-face": "^5.0.0",
     "@azure/ms-rest-azure-js": "^2.1.0",
+    "@google-cloud/documentai": "^8.7.0",
+    "@google-cloud/vision": "^4.3.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "chart.js": "^4.4.1",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
+    "crypto-js": "^4.2.0",
     "csv-writer": "^1.6.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
@@ -29,5 +32,8 @@
     "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1",
     "validator": "^13.12.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.2"
   }
 }
