--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,29 +11,21 @@ services:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db
-      # Eliminar las líneas de volúmenes de certificados
-      # - ./certs/mongod.conf:/etc/mongod.conf
-      # - ./certs/mongodb.pem:/etc/ssl/mongodb.pem
-      # - ./certs/ca-cert.pem:/etc/ssl/ca-cert.pem
     command: ["mongod"]
 
-  node_app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: healing_blends_node
-    ports:
-      - "6000:6000"
-    environment:
-      PORT: 6000
-      DATABASE_URL: mongodb://root:example@mongodb:27017/healing_blends_db?authSource=admin
-      SESSION_SECRET: some_secret
-    # Eliminar las líneas de volúmenes de certificados
-    # volumes:
-    #   - ./certs/mongodb.pem:/etc/ssl/mongodb.pem
-    #   - ./certs/ca-cert.pem:/etc/ssl/ca-cert.pem
-    depends_on:
-      - mongodb
+  # node_app:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile
+  #   container_name: healing_blends_node
+  #   ports:
+  #     - "6000:6000"
+  #   environment:
+  #     PORT: 6000
+  #     DATABASE_URL: mongodb://root:example@mongodb:27017/healing_blends_db?authSource=admin
+  #     SESSION_SECRET: some_secret
+  #   depends_on:
+  #     - mongodb
 
 volumes:
   mongo_data:
