--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.14",
     "validator": "^13.12.0"
   },
   "devDependencies": {
