--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@azure/cognitiveservices-face": "^5.0.0",
     "@azure/ms-rest-azure-js": "^2.1.0",
     "@google-cloud/documentai": "^8.7.0",
+    "@google-cloud/storage": "^7.11.3",
     "@google-cloud/vision": "^4.3.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
@@ -25,13 +26,20 @@
     "csv-writer": "^1.6.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "google-auth-library": "^9.11.0",
+    "imagemin": "^9.0.0",
+    "imagemin-jpegtran": "^7.0.0",
+    "imagemin-pngquant": "^10.0.0",
+    "jimp": "^0.22.12",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
+    "sharp": "^0.28.3",
+    "tesseract.js": "^5.1.0",
     "validator": "^13.12.0"
   },
   "devDependencies": {
